<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/cadastrarCliente_txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/cadastrarCliente_txtCpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cpf"
        android:ems="10" />

    <EditText
        android:id="@+id/cadastrarCliente_txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/cadastrarCliente_txtTel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone2"
        android:ems="10"
        android:inputType="phone" />
    
    <EditText
        android:id="@+id/cadastrarCliente_txtTel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone1"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/cadastrarCliente_txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:ems="10" />

    <EditText
        android:id="@+id/cadastrarCliente_txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/cadastrarCliente_txtValidePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valide_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cadastrarCliente_btnContinue"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/proximo" />

</LinearLayout>