<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/logar_txtName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/logar_txtPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/logar_btnLogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/logar" />

</LinearLayout>